# fastapi-tdd-docker

./: .env.example  .gitignore  README.md  docker-compose.yml  docker-login.sh  docker-push.sh  docker-verify.sh
.github/workflows/: main.yml
project/: .dockerignore  Dockerfile  Dockerfile.prod  pyproject.toml
project/app/: config.py  db.py  main.py  summarizer.py
project/app/api/: crud.py  ping.py  summaries.py  version.py
project/app/models/: pydantic.py  tortoise.py
project/tests/: conftest.py  test_ping.py  test_summaries.py  test_summaries_unit.py
